Doc/force-app/main/default/objects/QtC_Mig_PaymentAlloc_Temp_Table__c/fields/Applied_Amount_Without_symbol__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount_Without_symbol__c</fullName>
    <label>Applied Amount Without symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>