Doc/force-app/main/default/objects/QtC_Mig_PaymentAlloc_Temp_Table__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>