Doc/force-app/main/default/objects/QtC_Mig_PaymentAlloc_Temp_Table__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>