Doc/force-app/main/default/objects/QtC_Mig_PaymentAlloc_Temp_Table__c/fields/Invoice_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Internal_ID__c</fullName>
    <label>Invoice Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>